force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/cwbtool__Apex_Code_Analysis__c.object-meta.xml
<CustomObject>
    <label>Apex Code Analysis</label>
    <nameField>
        <displayFormat>ACA-{0000}</displayFormat>
        <label>Apex Code Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Code Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>