force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ApexCode</fullName>
                <default>true</default>
                <label>Apex Code</label>
            </value>
            <value>
                <fullName>ApexTestClass</fullName>
                <label>Apex Test Class</label>
            </value>
            <value>
                <fullName>RecordTypePicklist</fullName>
                <label>RecordType Picklist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>