force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Batch_Size__c</fullName>
    <defaultValue>&apos;10&apos;</defaultValue>
    <label>Batch Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>