force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Connection_ID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Connection_ID__c</fullName>
    <label>Connection ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>