force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>