force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Error__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Error__c</fullName>
    <label>Error</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>