force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Export_to_Excel__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Export_to_Excel__c</fullName>
    <formula>IF(ISPICKVAL(cwbtool__Action_Type__c ,&apos;ApexTestClass&apos;),HYPERLINK(&quot;/apex/cwbtool__VF_ApexClassCodeCoverageDownload?Id=&quot;+ Id+&quot;&amp;from=recDetail&quot;, &quot;Export To Excel&quot;, &quot;_blank&quot;),  
IF(ISPICKVAL(cwbtool__Action_Type__c ,&apos;RecordTypePicklist&apos;),HYPERLINK(&quot;/apex/cwbtool__RecordTypePicklistVisibilityDownload?Id=&quot;+ Id+&quot;&amp;from=recDetail&amp;reportId=&quot;+cwbtool__Request_Analysis_File_Name__c, &quot;Export To Excel&quot;, &quot;_blank&quot;),
HYPERLINK(&quot;/apex/cwbtool__downloadApexCodeAnalysis?Id=&quot;+ Id+&quot;&amp;from=recDetail&quot;, &quot;Export To Excel&quot;, &quot;_blank&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export to Excel</label>
    <type>Text</type>
</CustomField>