force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__MetadataContainer_ID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__MetadataContainer_ID__c</fullName>
    <label>MetadataContainer ID</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>