force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Org_Name__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Org_Name__c</fullName>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>