force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Req_Name__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Req_Name__c</fullName>
    <label>Req Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>