force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Request_Analysis_File_Name__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Request_Analysis_File_Name__c</fullName>
    <label>Request Analysis File Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>