force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Request_ID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Request_ID__c</fullName>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>