force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>