force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Step_2_ID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Step_2_ID__c</fullName>
    <label>Step 2 ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>