force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Step_One__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Step_One__c</fullName>
    <defaultValue>&apos;In Progress&apos;</defaultValue>
    <label>Step One</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>