force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__Target_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Target_Org_ID__c</fullName>
    <label>Target Org ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>