force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/fields/cwbtool__View_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__View_Job_Status__c</fullName>
    <formula>HYPERLINK(&quot;/apexpages/setup/listAsyncApexJobs.apexp&quot;, &quot;Click here to view Job status&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Job Status</label>
    <type>Text</type>
</CustomField>