force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/listViews/cwbtool__All.listView-meta.xml
<ListView>
    <fullName>cwbtool__All</fullName>
    <columns>NAME</columns>
    <columns>cwbtool__Action_Type__c</columns>
    <columns>cwbtool__Export_to_Excel__c</columns>
    <columns>cwbtool__Start_Date__c</columns>
    <columns>cwbtool__End_Date__c</columns>
    <columns>cwbtool__Step_One__c</columns>
    <columns>cwbtool__Step_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>