force-app/main/default/objects/cwbtool__Apex_Code_Analysis__c/listViews/cwbtool__Apex_Test_Class.listView-meta.xml
<ListView>
    <fullName>cwbtool__Apex_Test_Class</fullName>
    <columns>NAME</columns>
    <columns>cwbtool__Action_Type__c</columns>
    <columns>cwbtool__Org_Name__c</columns>
    <columns>cwbtool__Export_to_Excel__c</columns>
    <columns>cwbtool__Step_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cwbtool__Action_Type__c</field>
        <operation>equals</operation>
        <value>ApexTestClass</value>
    </filters>
    <label>Apex Test Class</label>
</ListView>